--- a/client/src/Components/Calculator.css
+++ b/client/src/Components/Calculator.css
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+
 @media(min-width:1024px){
     .Full-Page{
         display: flex;
         justify-content: space-between;
-        padding: 10px;
-        height: 100%;
-    
+        padding-top: 20px;
+        padding-bottom: 20px;
+        height: 947px;
+        align-items: center;
     
     }
     .Calculator-side{
@@ -13,8 +17,9 @@
         border-color: black;
         padding: 30px;
         border-width: 1px;
-        border-style: groove;
-        background-color: azure;
+        border-style: solid;
+        background-color: #FFFFFF;
+        border-radius: 10px;
     }
     .Salary-side{
         width: 43%;
@@ -22,8 +27,9 @@
         border-color: black;
         border-width: 1px;
         padding: 30px;
-        border-style: groove;
-        background-color: azure;
+        border-style: solid;
+        background-color: #FFFFFF;
+        border-radius: 10px;
     }
     
 }
@@ -33,6 +39,9 @@
         display: flex;
         flex-wrap: wrap;
         gap: 20px;
+        align-items: center;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
     .Calculator-side{
         width: 100%;
@@ -40,8 +49,9 @@
         border-color: black;
         padding: 30px;
         border-width: 1px;
-        border-style: groove;
-        background-color: azure;
+        border-style: solid;
+        background-color: #FFFFFF;
+        border-radius: 10px;
     }
     .Salary-side{
         width: 100%;
@@ -49,8 +59,9 @@
         border-color: black;
         border-width: 1px;
         padding: 30px;
-        border-style: groove;
-        background-color: azure;
+        border-style: solid;
+        background-color: #FFFFFF;
+        border-radius: 10px;
     }
 }
 
@@ -75,15 +86,35 @@
 .Salaries-Deductions{
     display: flex;
     justify-content: space-between;
+    padding-top: 10px;
+}
+
+.items{
+    font-size: 16px;
+    font-family: inter;
+    font-weight: 400;
 }
 
 .Net-Salary{
     display: flex;
     justify-content: space-between;
+    border-style: solid;
+    align-items: center;
+    padding: 10px;
+  
+    padding-top: 20px;
+    border-radius: 4px;
+    border-width: 0.1px;
+    border-color: #E0E0E0;
+}
+.net-salary-details{
+    font-size: 16px;
+    font-family: inter;
+    font-weight: 600;
 }
 
 .main-points{
-    font-size: 20;
+    font-size: 20px;
     font-family: inter;
     font-weight: bold;
 }
@@ -94,75 +125,162 @@
 }
 
 .semi-titles{
-    font-size: 16;
+    font-size: 16px;
     font-family: inter;
     font-weight: 600;
+    padding-top: 10px;
+    
 }
 
 .title-description{
-    font-size: 12;
+    font-size: 14px;
     font-family: inter;
     font-weight: 400;
+    padding-top: 5px;
 }
 
-.input{
-    font-size: 16;
+.pay-details-input{
+    font-size: 16px;
     font-family: inter;
     font-weight: 600;
     width: 212PX;
     height: 48PX;
     border-radius: 4px;
+    background-color: #FFFFFF;
+    padding-left: 10px;
+    border-color: #E0E0E0;
+    border-width: 1px;
+    border-style: solid;
 }
+
+.amount-input{
+    font-size: 16px;
+    font-family: inter;
+    font-weight: 600;
+    width: 212PX;
+    height: 48PX;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    padding-left: 10px;
+    border-color: #E0E0E0;
+  
+    border-width: 1px;
+    border-style: solid;
+    text-align: right;
+}
+.basic-salary-input{
+    font-size: 16px;
+    font-family: inter;
+    font-weight: 600;
+    width: 212PX;
+    height: 48PX;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    padding-left: 10px;
+    border-color: #E0E0E0;
+   
+    border-width: 1px;
+    border-style: solid;
+    
+}
+
 
 .add-new{
     font-size: 14px;
     font-family: inter;
     font-weight: 500;
     color: #0052EA;
-    
+    background-color: #FFFFFF;
+    border-width: 0;
 }
 
 .reset-button{
-    font-size: 14;
+    font-size: 14px;
     font-family: inter;
     font-weight: 500;
     color: #0052EA;
+    background-color: #FFFFFF;
+    border-width: 0;
 }
+
+
+
 
 .check-box{
     width: 18px;
     height: 18px;
-    background-color: #FFFFFF;
+    
+   margin-left: 20px;
+   
+   border-radius: 20px;
 }
-:checked .check-box{
+.check-box :checked{
     width: 18px;
     height: 18px;
     background-color: #0052EA;
 }
 
-.remove{
-    width: 32px;
-    height: 32px;
-    box-shadow: none;
-    background-color: red;
+.checkbox-and-details{
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
+.remove{
+    width: 35px;
+    height: 36px;
+    border-width: 0;
+    background-color: #FFFFFF;
+}
+.remove-img{
+    width: 32px;
+    height: 32px;
+    margin-left: -5px;
+}
+
+
 .epf-etf{
-    font-size: 16;
+    font-size: 16px;
     font-family: inter;
-    font-weight: 400;
+    font-weight: 500;
+    padding-top: 7px;
 }
 
 .one-row{
     display: flex;
+    flex-wrap: wrap;
     gap: 8px;
-   
+    padding-bottom: 15px;
     align-items: center;
 }
 
 .Earning{
-  
+  gap: 20px;
+  padding-bottom: 10px;
 }
 
+.Deductions{
+    padding-bottom: 10px;
+}
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+.Emplyer-Contribution{
+    font-size: 14px;
+    font-family: inter;
+    font-weight: 500;
+}
+
+.item-amount-both{
+    font-size: 14px;
+    font-family: inter;
+    font-weight: 500;
+}
+
+.salary-all{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.salary-deduction-all{
+    padding-top: 15px;
+    padding-bottom: 24.5px;
+}
